# hotfuzz

./: .dockerignore  .gitignore  CMakeLists.txt  README.md  main.cpp
deploy/: .env.example  Dockerfile  README.md  docker-compose.yml  entrypoint.sh
deploy/examples/: buffer_overflow.cpp  integer_overflow_allocation.cpp  null_dereference.cpp
include/: base_provider.hpp  hotfuzz.hpp  specs.h  utils.hpp
include/data/: base_provider.hpp  generators.hpp  providers.hpp  specs.h
include/fuzz/: calling_utils.hpp  failure_recorder.hpp  specs.h  utils.hpp
include/protocol/: helpers.hpp  io_utils.hpp  packet.hpp  packet_manager.hpp  specs.h
include/serialization/: api.hpp  byte_utils.hpp  helpers.hpp  rw_utils.hpp  serialization.hpp  specs.h
include/serialization/serializers/: map.hpp  optional.hpp  pair.hpp  set.hpp  tuple.hpp  variant.hpp
include/verbosity/: console_formatter.hpp  dashboard.hpp  scraper.hpp  specs.h
include/worker/: specs.h  utils.hpp  worker.hpp  worker_pool.hpp
